--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.example.lvicto.coultersanskrit">
 
     <application
+            android:name=".MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -16,6 +17,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".TextBookActivity">
+        </activity>
+
+
+        <service
+                android:name="com.example.sanskritkeyboard.CustomKeyboard"
+                android:label="CustomKeyboard"
+                android:permission="android.permission.BIND_INPUT_METHOD">
+
+            <meta-data android:name="android.view.im" android:resource="@xml/method"/>
+            <intent-filter>
+                <action android:name="android.view.InputMethod"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
