--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,18 +20,21 @@
         <activity android:name=".ui.TextBookActivity">
         </activity>
 
-
         <service
                 android:name="com.example.sanskritkeyboard.CustomKeyboard"
                 android:label="CustomKeyboard"
                 android:permission="android.permission.BIND_INPUT_METHOD">
+            <meta-data
+                    android:name="android.view.im"
+                    android:resource="@xml/method"/>
 
-            <meta-data android:name="android.view.im" android:resource="@xml/method"/>
             <intent-filter>
                 <action android:name="android.view.InputMethod"/>
             </intent-filter>
         </service>
 
+        <activity android:name=".ui.DictionaryActivity">
+        </activity>
     </application>
 
 </manifest>
