--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,11 @@ android {
 }
 
 dependencies {
+
+    // Module
     implementation project(":sanskritkeyboard")
+
+    // Misc
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -34,6 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     // Lifecycle components
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
@@ -44,4 +49,10 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
     kapt "android.arch.persistence.room:compiler:$rootProject.roomVersion"
     androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+
+    // RxJava & RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
 }
